Cleaned the code up with FINDBUGS.